Fix to text align on main menu on mobile

--- a/sass/partials/_menus.scss
+++ b/sass/partials/_menus.scss
@@ -58,6 +58,7 @@
 		opacity: 0;
 		animation-duration: .2s;
 		transition: opacity .2s ease;
+		text-align: inherit;
 	}
 
 }
